Sugati/src/objects/Hotel__c.object
<CustomObject>
    <description>A list of Hotels &amp; Accommodation Options</description>
    <fields>
        <fullName>H_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H_Country__c</fullName>
        <formula>H_Where_to_go__r.W_Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>H_Hotel_Code__c</fullName>
        <label>Hotel Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H_Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H_Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>H_Our_Opinion__c</fullName>
        <label>Our Opinion</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>H_Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>H_Quote__c</fullName>
        <label>Quote</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>H_Sales_Tips__c</fullName>
        <label>Sales Tips</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>H_Short_Forms__c</fullName>
        <label>Short Forms</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>H_State_County__c</fullName>
        <label>State / County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H_Street_1__c</fullName>
        <label>Street 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H_Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>H_Where_to_go__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Where to go</label>
        <referenceTo>Where_to_go__c</referenceTo>
        <relationshipLabel>Hotels</relationshipLabel>
        <relationshipName>Hotels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>H_Zip__c</fullName>
        <label>Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Hotel</label>
    <nameField>
        <displayFormat>H-{0000000000}</displayFormat>
        <label>Hotel ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hotels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>